# hyprland-py

./: .gitignore  LICENCE  LICENSE  README.md  build.sh  example.py  example_config.py  hyprland_py_sock  makefile  out.py  parse.py  pyproject.toml  requirements.txt  scraped.html  sections.json  setup.py  setup.py.bak  t.py  test.py  variables.py
docs/hyprland/: __init__.md  async.md  asyncio.md  binds.md  dispatch.md  errors.md  hyprctl.md  keyword.md  notify.md  socket.md  socket2.md  sync.md  syncio.md  variables.md
examples/: flicko.py  playground.py
hyprland/: __init__.py  async.py  asyncio.py  binds.py  config.py  dispatch.py  errors.py  event.py  events.py  hyprctl.py  info.py  keyword.py  notify.py  settings.py  socket.py  socket2.py  sockets.py  syncio.py  variables.py  window.py  workspace.py
hyprland/util/: hyprland.conf  scraper.py  sections.json
sockets/: commands.py  events.py
src/hyprland/: __init__.py  binds.py  config.py  dispatch.py  event.py  info.py  settings.py  sockets.py
src/hyprland/util/: scraper.py  values.py
tools/: wiki.py
util/: scraper.py
